--- a/packages/elvis/src/components/tag.scss
+++ b/packages/elvis/src/components/tag.scss
@@ -8,40 +8,40 @@ $label-font-size: 11px;
 $label-colors: map-merge(colors.$just-colors, colors.$primary-colors);
 
 %status-content {
-  border-radius: 50%;
   display: inline-flex;
+  border-radius: 50%;
   height: 8px;
-  left: 8px;
   width: 8px;
+  left: 8px;
 }
 
 @mixin circle($color) {
   padding: 4px 8px 4px 24px;
-
   &::before {
-    @extend %status-content;
-    background-color: colors.color($color);
     content: ' ';
     position: absolute;
+    background-color: colors.color($color);
+    @extend %status-content;
   }
 }
 
-// DEPRECATED (e-label only)
+// DEPRECATED (e-label)
 .e-label,
 .e-tag {
-  align-items: center;
-  background: colors.color('grey-10');
-  border-radius: $label-radius;
-  color: colors.color('font-color');
+  position: relative;
   display: inline-flex;
+  align-items: center;
+  padding: $label-padding;
+  border-radius: $label-radius;
+  background: colors.color('grey-10');
+
   font-family: 'Red Hat Text', Verdana, sans-serif;
   font-size: $label-font-size;
   font-weight: 400;
-  letter-spacing: 0.5px;
   line-height: 16px;
-  padding: $label-padding;
-  position: relative;
+  letter-spacing: 0.5px;
   text-transform: uppercase;
+  color: colors.color('font-color');
   white-space: nowrap;
 
   @each $colorName, $map in $label-colors {
