feat(component-related): add component-related

--- a/packages/web/src/app/doc-pages/components/badge-doc/badge-doc.component.html
+++ b/packages/web/src/app/doc-pages/components/badge-doc/badge-doc.component.html
@@ -52,4 +52,12 @@
       <app-component-changelog [changelog]="componentData.changelog"></app-component-changelog>
     </ng-container>
   </app-component-section>
+
+  <app-component-section [sectionTitle]="'Related'">
+    <ng-container ngProjectAs="sectionContent">
+      <app-component-related
+        [relatedComponents]="['Komponent1', 'Komponent2', 'Komponent3', 'Komponent4']"
+      ></app-component-related>
+    </ng-container>
+  </app-component-section>
 </div>
