--- a/packages/web/src/app/dev/v2-playground/v2-playground.component.html
+++ b/packages/web/src/app/dev/v2-playground/v2-playground.component.html
@@ -244,12 +244,12 @@
   <div class="example-wrapper">
     <h3>Date range picker</h3>
     <elvia-datepicker-range></elvia-datepicker-range>
-    <elvia-datepicker-range [errorOptions]="errorOptions"></elvia-datepicker-range>
+    <elvia-datepicker-range [errorOptions]="errorOptionsRange"></elvia-datepicker-range>
     <elvia-datepicker-range
       hasTimepickers
       [minDate]="minDateRange"
       [maxDate]="maxDateRange"
-      [errorOptions]="errorOptions"
+      [errorOptions]="errorOptionsRange"
     ></elvia-datepicker-range>
     <elvia-datepicker-range></elvia-datepicker-range>
   </div>
