--- a/packages/elvis/src/main.scss
+++ b/packages/elvis/src/main.scss
@@ -1,4 +1,4 @@
 @use 'components/main';
 @use 'variables/main' as main2;
 @use 'utilities/main' as main3;
-@use 'variables/theme' as main4;
+@use '@elvia/elvis-colors/dist/themeVariables' as ThemeVariables;
