--- a/packages/web/src/app/shared/component-documentation/component-example/component-example-generator/component-example-generator.component.html
+++ b/packages/web/src/app/shared/component-documentation/component-example/component-example-generator/component-example-generator.component.html
@@ -15,6 +15,7 @@
         <elvia-dropdown
           [items]="typeOptions"
           [value]="typeOptions[defaultType].value"
+          [errorOptions]="{ hasErrorPlaceholder: false }"
           label="Type"
           (valueOnChange)="
             updateFormStates('type', typeOptions, $event); updateSelectedType($event, typeOptions)
@@ -25,6 +26,7 @@
         <elvia-dropdown
           [items]="iconsOptions"
           [value]="defaultIcon"
+          [errorOptions]="{ hasErrorPlaceholder: false }"
           label="Icon name"
           (valueOnChange)="
             updateFormStates('name', iconsOptions, $event); updateSelectedType($event, iconsOptions, true)
@@ -35,6 +37,7 @@
         <elvia-dropdown
           [items]="typeOptions"
           [value]="typeOptions[0].value"
+          [errorOptions]="{ hasErrorPlaceholder: false }"
           label="Type"
           (valueOnChange)="
             updateFormStates('type', typeOptions, $event); updateSelectedTypeCustom($event, typeOptions)
@@ -45,6 +48,7 @@
         <elvia-dropdown
           [items]="bgOptions"
           [value]="bgOptions[defaultBg].value"
+          [errorOptions]="{ hasErrorPlaceholder: false }"
           label="Background"
           (valueOnChange)="
             updateFormStates(bgObj.propName, bgOptions, $event); updateSelectedBg($event, bgOptions)
