--- a/packages/web/src/app/dev/v2-playground/v2-playground.component.html
+++ b/packages/web/src/app/dev/v2-playground/v2-playground.component.html
@@ -6,7 +6,15 @@
     <!--Normal version-->
     <div class="e-bg-white"></div>
     <!--Inverted version-->
-    <div class="e-bg-grey"></div>
+    <div class="e-bg-grey">
+      <div class="e-alert--local">
+        <div class="e-alert--close"><p>hei</p></div>
+      </div>
+
+      <div class="e-alert--local">
+        <div class="e-tooltip"><p>hei</p></div>
+      </div>
+    </div>
   </div>
 
   <!--Accordion-->
