--- a/packages/web/src/app/dev/v2-playground/v2-playground.component.html
+++ b/packages/web/src/app/dev/v2-playground/v2-playground.component.html
@@ -4,27 +4,7 @@
     <!--Test the component here (delete what was here previously). When done add it to the list alphabetically-->
     <h3>Test your component here</h3>
     <!--Normal version-->
-    <div class="e-bg-white">
-      <elvia-dropdown
-        [items]="dropdownItems"
-        label="Select location"
-        (valueOnChange)="onDropdownSelect($event.detail.value)"
-        [errorOptions]="errorOptions"
-      ></elvia-dropdown>
-      <elvia-datepicker-range [errorOptions]="errorOptionsRange"></elvia-datepicker-range>
-      <elvia-datepicker
-        [value]="date"
-        (valueOnChange)="writeDate($event.detail.value)"
-        [errorOptions]="errorOptions"
-      ></elvia-datepicker>
-      <elvia-datepicker-range
-        hasTimepickers
-        [minDate]="minDateRange"
-        [maxDate]="maxDateRange"
-        [errorOptions]="errorOptionsRange"
-      ></elvia-datepicker-range>
-      <elvia-timepicker [errorOptions]="errorOptions"></elvia-timepicker>
-    </div>
+    <div class="e-bg-white"></div>
     <!--Inverted version-->
     <div class="e-bg-grey"></div>
   </div>
@@ -253,23 +233,17 @@
   <!--Datepicker-->
   <div class="example-wrapper">
     <h3>DatePicker</h3>
-    <elvia-datepicker
-      [value]="date"
-      (valueOnChange)="writeDate($event.detail.value)"
-      [errorOptions]="errorOptions"
-    ></elvia-datepicker>
+    <elvia-datepicker [value]="date" (valueOnChange)="writeDate($event.detail.value)"></elvia-datepicker>
   </div>
 
   <!--Date range picker-->
   <div class="example-wrapper">
     <h3>Date range picker</h3>
     <elvia-datepicker-range></elvia-datepicker-range>
-    <elvia-datepicker-range [errorOptions]="errorOptionsRange"></elvia-datepicker-range>
     <elvia-datepicker-range
       hasTimepickers
       [minDate]="minDateRange"
       [maxDate]="maxDateRange"
-      [errorOptions]="errorOptionsRange"
     ></elvia-datepicker-range>
     <elvia-datepicker-range></elvia-datepicker-range>
   </div>
