--- a/packages/web/src/app/dev/v2-playground/v2-playground.component.html
+++ b/packages/web/src/app/dev/v2-playground/v2-playground.component.html
@@ -233,25 +233,18 @@
   <!--Datepicker-->
   <div class="example-wrapper">
     <h3>DatePicker</h3>
-    <elvia-datepicker
-      [value]="date"
-      (valueOnChange)="writeDate($event.detail.value)"
-      [errorOptions]="errorOptions"
-    ></elvia-datepicker>
+    <elvia-datepicker [value]="date" (valueOnChange)="writeDate($event.detail.value)"></elvia-datepicker>
   </div>
 
   <!--Date range picker-->
   <div class="example-wrapper">
     <h3>Date range picker</h3>
     <elvia-datepicker-range></elvia-datepicker-range>
-    <elvia-datepicker-range [errorOptions]="errorOptionsRange"></elvia-datepicker-range>
     <elvia-datepicker-range
       hasTimepickers
       [minDate]="minDateRange"
       [maxDate]="maxDateRange"
-      [errorOptions]="errorOptionsRange"
     ></elvia-datepicker-range>
-    <elvia-datepicker-range></elvia-datepicker-range>
   </div>
 
   <!--Divider-->
@@ -273,6 +266,13 @@
       [items]="dropdownItems"
       label="Select location"
       (valueOnChange)="onDropdownSelect($event.detail.value)"
+    ></elvia-dropdown>
+    <h3>Dropdown</h3>
+    <elvia-dropdown
+      [items]="dropdownItems"
+      label="Select location"
+      (valueOnChange)="onDropdownSelect($event.detail.value)"
+      [errorOptions]="errorOptions"
     ></elvia-dropdown>
   </div>
 
