--- a/packages/web/src/app/doc-pages/components/breadcrumb-doc/breadcrumb-doc.component.html
+++ b/packages/web/src/app/doc-pages/components/breadcrumb-doc/breadcrumb-doc.component.html
@@ -9,7 +9,7 @@
 <!--BODY-->
 <div class="page-body">
   <!-- CEG -->
-  <app-component-example-generator [componentData]="componentData"></app-component-example-generator>
+  <app-ceg [componentData]="componentData"></app-ceg>
 
   <!-- USAGE -->
   <app-component-section [sectionTitle]="'Usage'">
