--- a/packages/web/src/app/shared/ceg/ceg.component.html
+++ b/packages/web/src/app/shared/ceg/ceg.component.html
@@ -1,21 +1,6 @@
 <div class="ceg-container">
   <!--Top filters-->
-  <div class="ceg-top-filters-container">
-    <!-- <elvia-dropdown
-      [items]="typeControl.options"
-      label="Type"
-      [value]="typeControl.value"
-      [formControlName]="'type'"
-      *ngIf="typeControl"
-    ></elvia-dropdown>
-    <elvia-dropdown
-      [items]="themeControl.options"
-      label="Theme"
-      [value]="themeControl.value"
-      [formControlName]="'theme'"
-      *ngIf="themeControl"
-    ></elvia-dropdown> -->
-  </div>
+  <div class="ceg-top-filters-container"></div>
 
   <!--Component preview-->
   <div class="ceg-component-container">
