--- a/packages/web/src/app/shared/ceg/code-preview/code-preview.component.html
+++ b/packages/web/src/app/shared/ceg/code-preview/code-preview.component.html
@@ -1,7 +1,7 @@
 <div class="e-bg-grey e-br-8 e-p-24 e-align-center">
   <div class="e-flex e-justify-content-between">
     <elvia-tabs
-      (valueOnChange)="updateCode($event.detail.value)"
+      (valueOnChange)="changeLanguage($event.detail.value)"
       [isInverted]="true"
       [value]="activeLanguageIndex"
       [items]="languages"
