--- a/packages/web/src/app/shared/ceg/ceg.component.html
+++ b/packages/web/src/app/shared/ceg/ceg.component.html
@@ -4,7 +4,7 @@
 
   <!--Component preview-->
   <div class="ceg-component-container">
-    <div [innerHTML]="dynamicCode" class="ceg-component"></div>
+    <div [innerHTML]="componentPreviewCode" class="ceg-component"></div>
   </div>
 
   <!--Side filters-->
