--- a/packages/web/src/app/shared/component-documentation/component-changelog/component-changelog.component.scss
+++ b/packages/web/src/app/shared/component-documentation/component-changelog/component-changelog.component.scss
@@ -4,3 +4,14 @@
     line-height: 22px;
   }
 }
+
+.empty-state {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  img {
+    width: 100%;
+    max-width: 112px;
+  }
+}
