refactor(docs): add changelog to elvis components

--- a/packages/web/src/app/doc-pages/components/list-doc/list-doc.component.html
+++ b/packages/web/src/app/doc-pages/components/list-doc/list-doc.component.html
@@ -1,6 +1,6 @@
 <!--HEADER-->
 <app-component-header [figmaUrl]="figmaUrl">
-  <ng-container ngProjectAs="headerTitle">List</ng-container>
+  <ng-container ngProjectAs="headerTitle">{{ title }}</ng-container>
   <ng-container ngProjectAs="headerDescription">
     {{ description }}
   </ng-container>
@@ -53,6 +53,13 @@
   <app-component-section [sectionTitle]="'Properties'" [propertiesClass]="'e-list'">
     <ng-container ngProjectAs="sectionContent">
       <app-component-properties [componentName]="'e-list'"></app-component-properties>
+    </ng-container>
+  </app-component-section>
+
+  <!--Changelog-->
+  <app-component-section [sectionTitle]="'Changelog'">
+    <ng-container ngProjectAs="sectionContent">
+      <app-component-changelog [elvisComponentToFilter]="title"></app-component-changelog>
     </ng-container>
   </app-component-section>
 </div>
