--- a/packages/web/src/app/doc-pages/components/forms/checkbox-doc/checkbox-doc.component.html
+++ b/packages/web/src/app/doc-pages/components/forms/checkbox-doc/checkbox-doc.component.html
@@ -1,6 +1,6 @@
 <!--HEADER-->
 <app-component-header [figmaUrl]="figmaUrl">
-  <ng-container ngProjectAs="headerTitle">Checkbox</ng-container>
+  <ng-container ngProjectAs="headerTitle">{{ title }}</ng-container>
   <ng-container ngProjectAs="headerDescription">
     {{ description }}
   </ng-container>
@@ -121,6 +121,13 @@
   <app-component-section [sectionTitle]="'Properties'" [propertiesClass]="'e-checkbox'">
     <ng-container ngProjectAs="sectionContent">
       <app-component-properties [componentName]="'e-checkbox'"></app-component-properties>
+    </ng-container>
+  </app-component-section>
+
+  <!--Changelog-->
+  <app-component-section [sectionTitle]="'Changelog'">
+    <ng-container ngProjectAs="sectionContent">
+      <app-component-changelog [elvisComponentToFilter]="title"></app-component-changelog>
     </ng-container>
   </app-component-section>
 </div>
