--- a/packages/web/src/app/doc-pages/components/forms/draganddrop-doc/draganddrop-doc.component.html
+++ b/packages/web/src/app/doc-pages/components/forms/draganddrop-doc/draganddrop-doc.component.html
@@ -41,4 +41,11 @@
       <app-component-properties [componentName]="'e-dragdrop'"></app-component-properties>
     </ng-container>
   </app-component-section>
+
+  <!--Changelog-->
+  <app-component-section [sectionTitle]="'Changelog'">
+    <ng-container ngProjectAs="sectionContent">
+      <app-component-changelog [elvisComponentToFilter]="title"></app-component-changelog>
+    </ng-container>
+  </app-component-section>
 </div>
