--- a/packages/web/src/app/doc-pages/components/forms/draganddrop-doc/draganddrop-doc.component.html
+++ b/packages/web/src/app/doc-pages/components/forms/draganddrop-doc/draganddrop-doc.component.html
@@ -1,6 +1,6 @@
 <!--HEADER-->
 <app-component-header [figmaUrl]="figmaUrl">
-  <ng-container ngProjectAs="headerTitle">Drag&Drop</ng-container>
+  <ng-container ngProjectAs="headerTitle">{{ title }}</ng-container>
   <ng-container ngProjectAs="headerDescription">
     {{ description }}
   </ng-container>
