--- a/packages/web/src/app/shared/ceg/ceg.component.scss
+++ b/packages/web/src/app/shared/ceg/ceg.component.scss
@@ -17,9 +17,8 @@
     grid-row: 2;
     grid-column: 1 / 5;
     .ceg-component {
-      display: flex;
-      justify-content: center;
-      align-items: center;
+      display: grid;
+      place-items: center;
       border: 1px solid var(--e-grey-10);
       padding: 40px;
       min-height: 300px;
