use slots in web playground

--- a/packages/web/src/app/dev/v2-playground/v2-playground.component.html
+++ b/packages/web/src/app/dev/v2-playground/v2-playground.component.html
@@ -5,10 +5,10 @@
     <h3>Test your component here</h3>
     <!--Normal version-->
     <div class="e-bg-white">
-      <elvia-accordion-group [items]="accordionGroupItems" [labels]="accordionGroupLabels">
-        <!-- <div slot="items">
+      <elvia-accordion-group [labels]="accordionGroupLabels">
+        <div slot="items">
           <p *ngFor="let item of accordionGroupItems">{{ item }}</p>
-        </div> -->
+        </div>
       </elvia-accordion-group>
     </div>
     <!--Inverted version-->
