--- a/packages/elvis/percy/components/buttons.html
+++ b/packages/elvis/percy/components/buttons.html
@@ -77,7 +77,7 @@
         <button class="e-btn e-btn---active e-m-8">
           <span class="e-btn__title">Active</span>
         </button>
-        <button class="e-btn e-btn---disabled e-m-8">
+        <button class="e-btn e-btn---disabled e-m-8" disabled>
           <span class="e-btn__title">Disabled</span>
         </button>
         <button class="e-btn e-btn---focus e-m-8">
@@ -143,7 +143,7 @@
         <button class="e-btn e-btn--secondary e-btn---active e-m-8">
           <span class="e-btn__title">Active</span>
         </button>
-        <button class="e-btn e-btn--secondary e-btn---disabled e-m-8">
+        <button class="e-btn e-btn--secondary e-btn---disabled e-m-8" disabled>
           <span class="e-btn__title">Disabled</span>
         </button>
         <button class="e-btn e-btn--secondary e-btn---focus e-m-8">
@@ -182,7 +182,7 @@
         </span>
         <span class="e-btn__title">Active</span>
       </button>
-      <button class="e-btn e-btn--tertiary e-btn---disabled e-m-8">
+      <button class="e-btn e-btn--tertiary e-btn---disabled e-m-8" disabled>
         <span class="e-btn__icon">
           <i class="e-icon e-icon--download e-icon--color-grey-30" aria-hidden="true"></i>
         </span>
@@ -249,7 +249,7 @@
       </div>
       <div class="e-mr-40" style="display: flex; flex-direction: column; align-items: center">
         <div class="e-text-md e-mb-8">Disabled</div>
-        <button class="e-btn e-btn--icon e-btn---disabled">
+        <button class="e-btn e-btn--icon e-btn---disabled" disabled>
           <span class="e-btn__icon">
             <i class="e-icon e-icon--upload e-icon--color-grey-30" aria-hidden="true"></i>
           </span>
