fix(percy alert): remove e-ml-24

--- a/packages/elvis/percy/components/alert.html
+++ b/packages/elvis/percy/components/alert.html
@@ -93,7 +93,7 @@
           <button class="e-btn e-btn--secondary e-btn--sm">
             <span class="e-btn__title">Secondary</span>
           </button>
-          <button class="e-btn e-ml-24 e-btn--sm">
+          <button class="e-btn e-btn--sm">
             <span class="e-btn__title">Primary</span>
           </button>
         </div>
